@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-03-24T00:32:29Z",
-  "count" : 136,
+  "timestamp" : "2022-03-24T08:08:44Z",
+  "count" : 69,
   "count_minmax" : [ 0, 153 ],
   "count_prev_day_inc" : 153,
   "count_prev_day_dec" : 136,
