@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-03-24T00:32:29Z",
-  "count" : 187,
-  "count_minmax" : [ 0, 187 ],
+  "timestamp" : "2022-03-24T08:08:44Z",
+  "count" : 189,
+  "count_minmax" : [ 0, 189 ],
   "count_prev_day_inc" : 152,
   "count_prev_day_dec" : 84,
   "uniques" : 18,
