@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-03-24T00:32:29Z",
+  "timestamp" : "2022-03-24T08:08:44Z",
   "count_outdated" : 9277,
   "uniques_outdated" : 253,
-  "count" : 11435,
-  "uniques" : 299,
+  "count" : 11416,
+  "uniques" : 301,
   "clones" : [
     {
       "timestamp": "2022-03-10T00:00:00Z",
-      "count": 136,
+      "count": 69,
       "count_minmax": [ 0, 153 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-03-23T00:00:00Z",
-      "count": 187,
-      "count_minmax": [ 0, 187 ],
+      "count": 189,
+      "count_minmax": [ 0, 189 ],
       "uniques": 18,
       "uniques_minmax": [ 0, 18 ]
+    },
+    {
+      "timestamp": "2022-03-24T00:00:00Z",
+      "count": 46,
+      "count_minmax": [ 0, 46 ],
+      "uniques": 2,
+      "uniques_minmax": [ 0, 2 ]
     }
   ]
 }
