@@ -1,10 +1,10 @@
 {
-  "count": 2158,
+  "count": 2139,
   "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-03-10T00:00:00Z",
-      "count": 136,
+      "count": 69,
       "uniques": 2
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-03-23T00:00:00Z",
-      "count": 187,
+      "count": 189,
       "uniques": 18
+    },
+    {
+      "timestamp": "2022-03-24T00:00:00Z",
+      "count": 46,
+      "uniques": 2
     }
   ]
 }
