@@ -1,6 +1,13 @@
+2022-03-24T08:08:44Z:
+* notice: prev accum: outdated-all outdated-unq / all unq: 9277 253 / 11435 299
+* notice: last 14d: all unq: 2139 20
+* notice: next accum: outdated-all outdated-unq / all unq: 9277 253 / 11416 301
+* notice: prev json diff: unq all: +2 +48 / -0 -67
+* notice: prev day diff: unq all: +18 +189 / -0 -84
+
 2022-03-24T00:32:29Z:
 * notice: prev accum: outdated-all outdated-unq / all unq: 9124 251 / 11227 283
 * notice: last 14d: all unq: 2158 20
 * notice: next accum: outdated-all outdated-unq / all unq: 9277 253 / 11435 299
 * notice: prev json diff: unq all: +16 +141 / -0 -17
-* notice: prev day diff: unq all: +16 +141 / -0 -17
+* notice: prev day diff: unq all: +16 +141 / -0 -17
